レビューを受けて修正
訳文ファイルのキー名修正とそれに伴うViewファイル、Controllerファイルの修正

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,5 @@
-<h1><%= t('translate.new') %></h1>
+<h1><%= t('book_app.new') %></h1>
 
 <%= render 'form', book: @book %>
 
-<%= link_to t('translate.back'), books_path %>
+<%= link_to t('book_app.back'), books_path %>
