--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= t('translate.main_title') %></h1>
+<h1><%= t('book_app.main_title') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th><%= t('translate.book_title') %></th>
-      <th><%= t('translate.memo') %></th>
-      <th><%= t('translate.author') %></th>
-      <th><%= t('translate.picture') %></th>
+      <th><%= t('book_app.book_title') %></th>
+      <th><%= t('book_app.memo') %></th>
+      <th><%= t('book_app.author') %></th>
+      <th><%= t('book_app.picture') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,9 +20,9 @@
         <td><%= book.memo %></td>
         <td><%= book.author %></td>
         <td><%= book.picture %></td>
-        <td><%= link_to t('translate.show'), book %></td>
-        <td><%= link_to t('translate.edit'), edit_book_path(book) %></td>
-        <td><%= link_to t('translate.destroy'), book, method: :delete, data: { confirm: t('translate.confirm') } %></td>
+        <td><%= link_to t('book_app.show'), book %></td>
+        <td><%= link_to t('book_app.edit'), edit_book_path(book) %></td>
+        <td><%= link_to t('book_app.destroy'), book, method: :delete, data: { confirm: t('book_app.confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to t('translate.new_book'), new_book_path %>
+<%= link_to t('book_app.new_book'), new_book_path %>
