訳文ファイルの修正
不要なプレフィックスの削除、それに伴うViewファイル、Controllerファイルの修正

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
-<h1><%= t('book_app.editing') %></h1>
+<h1><%= t('editing') %></h1>
 
 <%= render 'form', book: @book %>
 
-<%= link_to t('book_app.show'), @book %> |
-<%= link_to t('book_app.back'), books_path %>
+<%= link_to t('show'), @book %> |
+<%= link_to t('back'), books_path %>
