--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <div class="title"><%= t('.sign_in_as', email: current_user.email) %></div>
         <ul>
           <li>
-            <%= link_to t('devise.registrations.edit.title'), edit_user_registration_path %>
+            <%= link_to t('layouts.devise.registrations.edit.title'), edit_user_registration_path %>
           </li>
           <li>
             <%= link_to t('views.common.sign_out'), destroy_user_session_path, method: :delete %>
