--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('.sign_up') %></h2>
+<h2><%= t('devise.registrations.new.sign_up') %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -8,7 +8,7 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <%= render 'devise/registrations/profile_fields', f: f %>
+  <%= render 'users/registrations/profile_fields', f: f %>
 
   <div class="field">
     <%= f.label :password %>
@@ -24,7 +24,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit t('.sign_up') %>
+    <%= f.submit t('devise.registrations.new.sign_up') %>
   </div>
 <% end %>
 
