autocomplete属性の修正

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,7 +48,7 @@
 
   <div class="field">
     <%= f.label t('views.user.introduction') %><br />
-    <%= f.text_field :introduction, autocomplete: "on" %>
+    <%= f.text_field :introduction %>
   </div>
 
   <div class="actions">
