--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,17 +27,17 @@
 
  <div class="field">
     <%= f.label t('views.user.post_code') %><br />
-    <%= f.text_field :post_code, autocomplete: "post_code" %>
+    <%= f.text_field :post_code, autocomplete: "postal-code" %>
   </div>
 
  <div class="field">
     <%= f.label t('views.user.address') %><br />
-    <%= f.text_field :address, autocomplete: "address" %>
+    <%= f.text_field :address, autocomplete: "on" %>
   </div>
 
   <div class="field">
     <%= f.label t('views.user.introduction') %><br />
-    <%= f.text_field :introduction, autocomplete: "introduction" %>
+    <%= f.text_field :introduction %>
   </div>
 
   <div class="actions">
