--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,4 +1,4 @@
-<h1><%= "Following" %></h1>
+<h1><%= User.human_attribute_name(:following_list) %></h1>
 
 <table>
   <thead>
@@ -11,7 +11,6 @@
       <th></th>
     </tr>
   </thead>
-
   <% if @users.present? %>
     <tbody>
       <% @users.each do |user| %>
