--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,23 +34,23 @@
 </p>
 
 <p>
-<%= link_to 'フォロー', followings_user_path %>:<%= @user.followings.count %>
+<%= link_to User.human_attribute_name(:following) , followings_user_path %>:<%= @user.followings.count %>
 </p>
 
 <p>
-<%= link_to 'フォロワー', followers_user_path %>:<%= @user.followers.count %>
+<%= link_to User.human_attribute_name(:follower), followers_user_path %>:<%= @user.followers.count %>
 </p>
 
 <% if current_user == @user %>
 <% else %>
   <% if current_user.following?(@user) %>
     <%= form_with id: current_user.active_relationships.find_by(followed_id: @user.id), url: followingandfollower_path, method: :delete do |f| %>
-      <%= f.submit "フォローを外す" %>
+      <%= f.submit User.human_attribute_name(:unfollow) %>
     <% end %>
   <% else %>
     <%= form_with model: current_user.active_relationships, url: followingandfollowers_path do |f| %>
       <%= f.hidden_field :followed_id, value: @user.id %>
-      <%= f.submit "フォローする" %>
+      <%= f.submit User.human_attribute_name(:follow) %>
     <% end %>
   <% end %>
 <% end %>
