--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,8 +41,7 @@
 <%= link_to User.human_attribute_name(:follower), followers_user_path %>:<%= @user.followers.count %>
 </p>
 
-<% if current_user == @user %>
-<% else %>
+<% if current_user != @user %>
   <% if current_user.following?(@user) %>
     <%= form_with id: current_user.active_relationships.find_by(followed_id: @user.id), url: followingandfollower_path, method: :delete do |f| %>
       <%= f.submit User.human_attribute_name(:unfollow) %>
