--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -12,11 +12,6 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
@@ -27,6 +22,7 @@
   </div>
 
   <div class="actions">
+    <%= form.hidden_field :user_id, :value => current_user.id %>
     <%= form.submit %>
   </div>
 <% end %>
