--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -15,11 +15,14 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
-        <td><%= report.user_id %></td>
+        <% if report.user.name == "" %>
+          <td><%= report.user.email %></td>
+        <% else %>
+          <td><%= report.user.name %></td>
+        <% end %>
         <td><%= report.title %></td>
-        <td><%= report.content %></td>
+        <td><%= report.created_at %></td>
         <td><%= link_to 'Show', report %></td>
-        <td><%= link_to 'Edit', edit_report_path(report) %></td>
         <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
