--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,3 +22,43 @@
 
 <%= link_to t('views.common.edit'), edit_book_path(@book) %> |
 <%= link_to t('views.common.back'), books_path %>
+
+<h2>Comments</h2>
+<table>
+  <thead>
+    <tr>
+      <th>User</th>
+      <th>Content</th>
+      <th>Time</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @comments.each do |comment| %>
+      <tr>
+        <% if comment.user.name == "" %>
+          <td><%= comment.user.email %></td>
+        <% else %>
+          <td><%= comment.user.name %></td>
+        <% end %>
+        <td><%= comment.content %></td>
+        <% if comment.created_at < comment.updated_at %>
+          <td><%= comment.updated_at %></td>
+        <% else %>
+          <td><%= comment.created_at %></td>
+        <% end %>
+        <td><%= link_to 'Show', [@book, comment] %></td>
+        <td><%= link_to 'Destroy', [@book, comment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= render 'comments/new' %>
+
+<br>
+<%= link_to t('views.common.edit'), edit_book_path(@book) %> |
+<%= link_to t('views.common.back'), books_path %>
