--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,16 +20,13 @@
   <%= image_tag(@book.picture_url) if @book.picture.present? %>
 </p>
 
-<%= link_to t('views.common.edit'), edit_book_path(@book) %> |
-<%= link_to t('views.common.back'), books_path %>
-
-<h2>Comments</h2>
+<h2><%= Comment.model_name.human %></h2>
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Content</th>
-      <th>Time</th>
+      <th><%= Comment.human_attribute_name(:user) %></th>
+      <th><%= Comment.human_attribute_name(:content) %></th>
+      <th><%= Comment.human_attribute_name(:posted_time) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -48,8 +45,8 @@
         <% else %>
           <td><%= comment.created_at %></td>
         <% end %>
-        <td><%= link_to 'Show', [@book, comment] %></td>
-        <td><%= link_to 'Destroy', [@book, comment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('views.common.show'), [@book, comment] %></td>
+        <td><%= link_to t('views.common.destroy'), [@book, comment], method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
