レビューの対応 commentscontrollerの不要なアクションの削除 / commentのrouteを見直し / 重複処理の共通化

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -13,11 +13,7 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
-        <% if report.user.name == "" %>
-          <td><%= report.user.email %></td>
-        <% else %>
-          <td><%= report.user.name %></td>
-        <% end %>
+        <td><%= report.user.name_or_email(report.user) %></td>
         <td><%= report.title %></td>
         <td><%= report.created_at %></td>
         <td><%= link_to t('views.common.show'), report %></td>
