--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -19,37 +19,7 @@
   <%= @report.content %>
 </p>
 
-<h2><%= Comment.model_name.human %></h2>
-<table>
-  <thead>
-    <tr>
-      <th><%= Comment.human_attribute_name(:user) %></th>
-      <th><%= Comment.human_attribute_name(:content) %></th>
-      <th><%= Comment.human_attribute_name(:posted_time) %></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @comments.each do |comment| %>
-      <tr>
-        <% if comment.user.name == "" %>
-          <td><%= comment.user.email %></td>
-        <% else %>
-          <td><%= comment.user.name %></td>
-        <% end %>
-        <td><%= comment.content %></td>
-        <% if comment.created_at < comment.updated_at %>
-          <td><%= comment.updated_at %></td>
-        <% else %>
-          <td><%= comment.created_at %></td>
-        <% end %>
-        <td><%= link_to t('views.common.show'), [@report, comment] %></td>
-        <td><%= link_to t('views.common.destroy'), [@report, comment], method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render partial: 'comments/comments', locals: { comments: @comments, commentable: @report} %>
 
 <br>
 
