--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,7 @@
 
 <br>
 
-<%= render 'comments/new' %>
+<%= render partial: 'comments/new', locals: { comment: @comment, commentable: @book} %>
 
 <br>
 <%= link_to t('views.common.edit'), edit_book_path(@book) %> |
