--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -23,7 +23,7 @@
 
 <br>
 
-<%= render 'comments/new' %>
+<%= render partial: 'comments/new', locals: { comment: @comment, commentable: @report} %>
 
 <% if current_user.id == @report.user_id %>
   <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
