ユーザ名/メアドを呼び出す処理を差替え

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -2,11 +2,7 @@
 
 <p>
   <strong><%= Comment.human_attribute_name(:user) %>:</strong>
-  <% if @comment.user.name == "" %>
-    <td><%= @comment.user.email %></td>
-  <% else %>
-    <td><%= @comment.user.name %></td>
-  <% end %>
+    <td><%= @comment.user.name_or_email %></td>
 </p>
 
 <p>
