--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -2,11 +2,7 @@
 
 <p>
   <strong><%= Report.human_attribute_name(:user) %>:</strong>
-  <% if @report.user.name == "" %>
-    <td><%= @report.user.email %></td>
-  <% else %>
-    <td><%= @report.user.name %></td>
-  <% end %>
+    <td><%= @report.user.name_or_email %></td>
 </p>
 
 <p>
